# carbonica

./: .env.example  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION.md  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOY.md  Dockerfile  INSTALL.md  MANIFEST.in  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
carbonica/: __init__.py  carbonica_engine.py  pcsi.py
carbonica/cli/: __init__.py  commands.py  main.py
carbonica/modules/: __init__.py  carbon_budget.py  ocean_sink.py  permafrost_engine.py  quantum_yield_tracker.py
carbonica/statistics/: __init__.py  cusum.py  monte_carlo.py  pca_regression.py  sem.py  simple_stats.py
carbonica/visualization/: __init__.py  correlation_matrix.py  parameter_plots.py  pcsi_dashboard.py  projection_plot.py
docs/: CARBONICA_RESEARCH_PAPER.docx
notebooks/: 01_keeling_validation.ipynb  02_revelle_factor.ipynb  03_permafrost_flux.ipynb  04_quantum_yield.ipynb  05_correlation_matrix.ipynb  06_amazon_case_study.ipynb  07_arctic_case_study.ipynb  08_ssp_projections.ipynb  09_sem_pathways.ipynb  10_monte_carlo_uncertainty.ipynb  11_tipping_points.ipynb  12_policy_budget_correction.ipynb  __init__.py
reports/: README.md
reports/alerts/: 2026-03-13_09-16_pcsi.txt
reports/daily/: 2026-03-13_coverage.txt  2026-03-13_report.txt  2026-03-13_test_results.txt
reports/monthly/: 2026-03_analysis.md
reports/weekly/: 2026-W11_summary.md
scripts/: __init__.py  cleanup.sh  create_zenodo_archive.sh  cron_example.txt  deploy_netlify.sh  download_all_data.sh  generate_docs.sh  generate_reports.py  generate_reports.sh  run_tests.sh  setup_environment.sh
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_full_pipeline.py  test_pcsi_calculation.py
tests/unit/: __init__.py  test_carbonica_engine.py  test_cusum.py  test_monte_carlo.py  test_ocean_sink.py  test_pcsi.py  test_permafrost.py  test_quantum_yield.py  test_simple_stats.py
tests/validation/: __init__.py  test_keeling_curve.py
