# CARBONICA Setup Configuration
# Advanced Planetary Carbon Accounting & Feedback Dynamics
# Version: 1.0.0 | DOI: 10.5281/zenodo.18995446

[metadata]
name = carbonica
version = 1.0.0
author = Samir Baladi
author_email = gitdeeper@gmail.com
maintainer = Samir Baladi
maintainer_email = gitdeeper@gmail.com
description = CARBONICA: Advanced Planetary Carbon Accounting & Feedback Dynamics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gitdeeper9/carbonica
download_url = https://github.com/gitdeeper9/carbonica/archive/v1.0.0.tar.gz
project_urls =
    Documentation = https://carbonica.netlify.app/docs
    Source = https://github.com/gitdeeper9/carbonica
    Bug Reports = https://github.com/gitdeeper9/carbonica/issues
    Discussion = https://github.com/gitdeeper9/carbonica/discussions
    DOI = https://doi.org/10.5281/zenodo.18995446
    Web Dashboard = https://carbonica.netlify.app
    Research Paper = https://doi.org/10.5281/zenodo.18995446
license = MIT
license_file = LICENSE
platforms = any
keywords =
    carbon-cycle,
    climate-science,
    earth-system,
    biogeochemistry,
    permafrost,
    ocean-carbon,
    revelle-factor,
    photosynthesis,
    npp,
    carbon-budget,
    climate-feedback,
    planetary-boundaries,
    open-source,
    scientific-computing,
    python,
    earth-observation,
    keeling-curve,
    modis,
    gosat,
    oco2,
    gtnp,
    socat,
    glodap

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9, <3.12
setup_requires =
    setuptools>=61.0
    wheel>=0.38
    cython>=0.29.0
install_requires =
    numpy>=1.24.0
    scipy>=1.10.0
    pandas>=2.0.0
    xarray>=2023.4.0
    numba>=0.57.0
    sympy>=1.11.1
    matplotlib>=3.7.0
    plotly>=5.14.0
    seaborn>=0.12.0
    h5py>=3.8.0
    netCDF4>=1.6.0
    pyyaml>=6.0
    python-dotenv>=1.0.0
    requests>=2.30.0
    tqdm>=4.65.0
    click>=8.1.0
    joblib>=1.2.0
    scikit-learn>=1.2.0
    statsmodels>=0.14.0
    colorama>=0.4.6

[options.packages.find]
include =
    carbonica
    carbonica.*
exclude =
    tests
    tests.*
    docs
    docs.*
    examples
    examples.*
    notebooks
    notebooks.*

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0
    pytest-asyncio>=0.20.0
    black>=23.0.0
    isort>=5.0.0
    flake8>=6.0.0
    pylint>=2.0.0
    mypy>=1.0.0
    pre-commit>=3.0.0
    ipython>=8.0.0
    jupyter>=1.0.0
    nbconvert>=7.0.0
    nbformat>=5.0.0

ml =
    tensorflow>=2.12.0
    torch>=2.0.0
    pytorch-lightning>=2.0.0
    xgboost>=1.7.0
    lightgbm>=3.3.0
    prophet>=1.1.0

gpu =
    cupy-cuda11x>=12.0.0
    cudf>=23.0.0
    cuml>=23.0.0
    tensorrt>=8.5.0

docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.2.0
    sphinx-autodoc-typehints>=1.23.0
    sphinx-gallery>=0.13.0
    nbsphinx>=0.9.0
    mkdocs>=1.4.0
    mkdocs-material>=9.0.0
    mkdocstrings[python]>=0.22.0
    pymdown-extensions>=10.0.0

test =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-xdist>=3.0.0
    pytest-asyncio>=0.20.0
    pytest-mock>=3.0.0
    responses>=0.23.0
    hypothesis>=6.0.0

web =
    flask>=2.3.0
    flask-cors>=4.0.0
    flask-socketio>=5.3.0
    flask-restx>=1.1.0
    dash>=2.9.0
    dash-bootstrap-components>=1.4.0
    dash-daq>=0.5.0
    gunicorn>=20.1.0
    uvicorn>=0.22.0
    fastapi>=0.100.0

db =
    psycopg2-binary>=2.9.6
    sqlalchemy>=2.0.12
    redis>=4.5.0

all =
    %(dev)s
    %(ml)s
    %(gpu)s
    %(docs)s
    %(test)s
    %(web)s
    %(db)s

[options.entry_points]
console_scripts =
    carbonica = carbonica.cli.main:cli
    carbonica-init = carbonica.cli.init:main
    carbonica-download = carbonica.cli.download:main
    carbonica-process = carbonica.cli.process:main
    carbonica-pcsi = carbonica.cli.pcsi:main
    carbonica-serve = carbonica.cli.serve:main
    carbonica-diagnostic = carbonica.cli.diagnostic:main
    carbonica-download-sample = carbonica.cli.download_sample:main
    carbonica-validate = carbonica.cli.validate:main
    carbonica-report = carbonica.cli.report:main
    carbonica-plot = carbonica.cli.plot:main
    carbonica-config = carbonica.cli.config:main
    carbonica-db = carbonica.cli.database:main

carbonica.physics =
    npp = carbonica.physics.npp:NetPrimaryProductivity
    ocean_sink = carbonica.physics.ocean_sink:OceanCarbonSink
    revelle = carbonica.physics.revelle:RevelleFactor
    permafrost = carbonica.physics.permafrost:PermafrostThawFlux
    soil = carbonica.physics.soil:SoilCarbonResidence
    quantum_yield = carbonica.physics.quantum_yield:PhotosyntheticQuantumYield
    pcsi = carbonica.physics.pcsi:PlanetaryCarbonSaturationIndex

carbonica.data =
    keeling = carbonica.data.loaders.keeling:KeelingLoader
    socat = carbonica.data.loaders.socat:SOCATLoader
    modis = carbonica.data.loaders.modis:MODISLoader
    gtnp = carbonica.data.loaders.gtnp:GTNPLoader
    glodap = carbonica.data.loaders.glodap:GLODAPLoader
    gosat = carbonica.data.loaders.gosat:GOSATLoader
    oco2 = carbonica.data.loaders.oco2:OCO2Loader

carbonica.processing =
    carbon_budget = carbonica.processing.budget:CarbonBudget
    ocean_sink = carbonica.processing.ocean:OceanSinkModel
    permafrost = carbonica.processing.permafrost:PermafrostEngine
    quantum_yield = carbonica.processing.quantum:QuantumYieldTracker
    uncertainty = carbonica.processing.uncertainty:MonteCarloPropagator

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = .git,__pycache__,docs,venv,.venv,env,dist,build,notebooks,data
per-file-ignores =
    __init__.py:F401
    tests/*.py:S101  # Allow assert in tests

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = carbonica
known_third_party =
    numpy,
    scipy,
    pandas,
    xarray,
    matplotlib,
    plotly,
    seaborn,
    sklearn,
    tensorflow,
    torch,
    flask,
    dash,
    sqlalchemy,
    redis

[mypy]
python_version = 3.10
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True
disallow_untyped_defs = False
check_untyped_defs = True
follow_imports = silent
exclude = (build|docs|tests|examples|notebooks|data)/

[mypy.plugins.numpy.*]
plugins = numpy.typing.mypy_plugin

[pylint.MASTER]
ignore = CVS
ignore-patterns = ^.*\.md$,^.*\.rst$
jobs = 0
load-plugins = pylint.extensions.docparams, pylint.extensions.docstyle
persistent = yes
suggestion-mode = yes

[pylint.MESSAGES CONTROL]
disable =
    C0111,  # missing-docstring
    C0103,  # invalid-name
    R0903,  # too-few-public-methods
    R0913,  # too-many-arguments
    R0914,  # too-many-locals
    R0915,  # too-many-statements
    W0511,  # fixme
    W0703,  # broad-except

[pylint.REPORTS]
output-format = colorized
reports = no
score = yes

[pylint.DESIGN]
max-args = 10
max-attributes = 15
max-locals = 25
max-returns = 10
max-branches = 20
max-statements = 100
max-parents = 10
max-module-lines = 2000

[tool:pytest]
minversion = 7.0
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    -ra
    --strict-markers
    --strict-config
    --tb=short
    --verbose
    --cov=carbonica
    --cov-report=term
    --cov-report=html
    --cov-report=xml
    --no-cov-on-fail
markers =
    slow: marks tests as slow
    integration: marks integration tests
    unit: marks unit tests
    validation: marks validation tests with observational data
    gpu: marks tests that require GPU

[coverage:run]
source = carbonica
omit =
    */tests/*
    */docs/*
    */examples/*
    */notebooks/*
    */setup.py
    */version.py
    */conftest.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if __name__ == .__main__.:
    raise AssertionError
    raise NotImplementedError
    return NotImplemented
    pass
    ^\s*\.\.\.$

[coverage:html]
directory = htmlcov

[coverage:xml]
output = coverage.xml

[coverage:json]
output = coverage.json

[build_sphinx]
source-dir = docs/source
build-dir = docs/build
all_files = 1

[bdist_wheel]
universal = 0

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[aliases]
test = pytest

# =============================================================================
# END OF SETUP CONFIGURATION
# =============================================================================
